Changes minor css elements

--- a/core/tools/old/tool_upload/css/tool_upload.less
+++ b/core/tools/old/tool_upload/css/tool_upload.less
@@ -7,7 +7,7 @@
 	width: 470px;
 	/*height: 190px;*/
 	min-height: 190px;
-	margin: 0;	
+	margin: 0;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 0;
@@ -18,7 +18,7 @@
 	background-image: none;
 }
 .wrap_tool_upload_page .content_data {
-	display:block;	
+	display:block;
 	width: 100%;
 }
 
@@ -28,12 +28,12 @@
 	display:block;
 	width:420px;
 	margin: 20px;
-	padding:0px;	
+	padding:0px;
 	border: 1px solid #cccccc;
-	border-radius:10px;	
-	box-shadow: 0 0 10px #999999;	  
-	
-	background-image: -moz-linear-gradient(top, #ffffff,#f2f2f2);	
+	border-radius:10px;
+	box-shadow: 0 0 10px #999999;
+
+	background-image: -moz-linear-gradient(top, #ffffff,#f2f2f2);
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#eeeeee)); /* from(#f2f2f2), to(#eeeeee)); */
 	}
 	#form_upload .valid_extensions {
@@ -41,11 +41,11 @@
 		font-size: 0.8em;
 		color: #aebdcc
 	}
-	#form_upload div.row { 
-		margin-bottom: 10px; 
-		color:#999999; 
-		text-align:left; 
-		padding:5px; 
+	#form_upload div.row {
+		margin-bottom: 10px;
+		color:#999999;
+		text-align:left;
+		padding:5px;
 		display:block;
 		margin: 0;
 	}
@@ -61,9 +61,9 @@
 #form_upload input[type=file] {
 	/*border:1px solid #ccc;*/
 	padding: 15px 13px 5px 15px;
-  	border-radius: 10px;	
+  	border-radius: 10px;
 	}
-	#form_upload input[type=file]:focus {		
+	#form_upload input[type=file]:focus {
 		box-shadow: 0 0 5px #ccc;
 	}
 
@@ -78,14 +78,14 @@
 }
 
 #fileInfo {
-	font-size: 10pt;	
-	font-style: italic;	
-	color: #aaa;	
+	font-size: 10pt;
+	font-style: italic;
+	color: #aaa;
 	margin: 0px;
 	margin-top: 10px;
 	padding: 10px;
 	text-align:left !important;
-	
+
 }
 
 .floatLeft { float: left; }
@@ -104,26 +104,26 @@ hr { color:#CCC;background-color:#CCC;height:1px; border:none; }
 	height: 14px;
 	margin: 10px;
 	border: 1px solid #cccccc;
-	
-	display: none;
-	
-		 border-radius: 5px;	
-	-moz-border-radius: 5px;	  
-	
-	background-image: -moz-linear-gradient(top, #66cc00, #4b9500);	
+
+	// display: none;
+
+		 border-radius: 5px;
+	-moz-border-radius: 5px;
+
+	background-image: -moz-linear-gradient(top, #66cc00, #4b9500);
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#66cc00), to(#4b9500));
 }
 
 
 #uploadResponse {
-	margin: 10px;	
-	padding: 20px;	
-	overflow: hidden;	
-	display: none;	
-	border: 1px solid #ccc;	
-	border-radius: 10px;	
-	box-shadow: 0 0 5px #ccc;	
-	background-image: -moz-linear-gradient(top, #ff9900, #c77801);	
+	margin: 10px;
+	padding: 20px;
+	overflow: hidden;
+	display: none;
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	box-shadow: 0 0 5px #ccc;
+	background-image: -moz-linear-gradient(top, #ff9900, #c77801);
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#ff9900), to(#c77801));
 }
 
@@ -167,17 +167,17 @@ legend { padding: 2px 6px}
 .upload_icon {
 	top: 1px;
 	margin-right: 5px;
-} 
+}
 .av_icon {
-	background-position: -192px 0px;	
+	background-position: -192px 0px;
 }
 .image_icon {
-	background-position: -456px -48px;	
+	background-position: -456px -48px;
 }
 .pdf_icon {
 	background-image: url('../../../themes/default/pdf_icon_14x14.gif');
 	background-repeat: no-repeat;
-	background-position: center;	
+	background-position: center;
 }
 .file_icon {
 	background-position: -24px -24px;
