--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -697,9 +697,9 @@
 			&.component_image {
 				img {
 					padding: 0;
-					height: 100%;
-					//max-height: 10em;
-					width: 100%;
+					// height: 100%;
+					// max-height: 10em;
+					// width: 100%;
 				}
 			}
 
@@ -1615,7 +1615,7 @@
 // posterframe / image
 	.posterframe, .image  {
 		height: 100%;
-		width: 100%;
+		max-width: 100%;
 		//min-height: 14em;
 		//background-position: initial;
 		//background-size: cover;
