Fix overload cases inside components

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -88,6 +88,7 @@
 		flex: 0 1 50%; // <'flex-grow'> <'flex-shrink'>? || <'flex-basis'>
 		align-content: flex-start; // maintain items flow from top to bottom
 		//flex: 0 1 auto;
+		overflow: auto;
 
 		input[type="text"], input[type="number"], input[type="url"], input[type="password"], button[type="submit"], textarea, select, .contenteditable {
 
