change the padding into menu

--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -298,8 +298,9 @@ background-color: #FFFF00;
 			display: block;
 			width: 100%;
 			margin: 0;
-			padding: 4px;
+			// padding: 4px;
 			padding-left: 6px;
+			padding-right: 18px;
 			letter-spacing: 0.7px;
 			font-weight: 300 !important;
 
@@ -353,7 +354,7 @@ background-color: #FFFF00;
 			background: #fcfcfc;
 			margin: 0;
 			padding: 0;
-			min-width: 200px;
+			min-width: 175px;
 			position: absolute;
 			top: @menu_heigth;
 			// left: -1px;
