--- a/core/section_records/rows/html/rows_list.phtml
+++ b/core/section_records/rows/html/rows_list.phtml
@@ -30,7 +30,7 @@
 				# List line custom config
 				# dump($this->section_records_obj->options->list_line, ' this ++ '.to_string());
 				# dump($this, ' this ++ '.to_string());						
-				$section_config = isset($_SESSION['dedalo4']['section_config'][$section_tipo]) ? $_SESSION['dedalo4']['section_config'][$section_tipo] : null;
+				$section_config = isset($_SESSION['dedalo']['section_config'][$section_tipo]) ? $_SESSION['dedalo']['section_config'][$section_tipo] : null;
 				$id_column_buttons_css='';
 				if(isset($section_config['list_line']) && $section_config['list_line']==='single') {
 					$id_column_buttons_css = 'id_column_buttons_single_line';
