--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -706,7 +706,7 @@
 
 			// component_svg
 			&.component_svg {
-				img {
+				img.image {
 					padding: 0;
 					height: 100%;
 					//max-height: 10em;
@@ -810,10 +810,17 @@
 
 				>.buttons_container {
 					background-color: #ffffff;
-					flex: 0 1;
+					// background-color: #BDFF69;
+					flex: 0 1 1em;
 					padding: 0; // 0.15em;
 					border-radius: 0.25em;
 					//position: relative;
+
+					// 2
+					position: absolute;
+					top: 0;
+					right: 0;
+
 
 					>*{
 						//margin: 0.365em;
