Moves paginator.less from /core/page/layout to /core/paginator/css

--- a/core/page/css/main.less
+++ b/core/page/css/main.less
@@ -14,7 +14,7 @@
 
 // services
 	@import "../../inspector/css/inspector.less";
-	@import "./layout/paginator.less";
+	@import "../../paginator/css/paginator.less";
 	@import "../../search/css/search.less";
 	@import "../../services/service_autocomplete/css/service_autocomplete.less";
 
