--- a/core/component_geolocation/css/component_geolocation.less
+++ b/core/component_geolocation/css/component_geolocation.less
@@ -68,23 +68,7 @@
 
 /* MAP
 -------------------------------------------------- */
-	.leaflet_map {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		min-height: 300px;
-		margin: 0;
-		padding: 0;
-		padding-bottom: 5px;
-		z-index: 1;
 
-		.leaflet-control-zoom a {
-			font-size: initial !important;
-			font-weight: bold;
-		}
-
-
-	}//end .leaflet_map
 
 	.map_inputs {
 		-webkit-touch-callout: none;
@@ -164,5 +148,63 @@
 .leaflet-draw-draw-circle {
 	display: none !important;
 }
+
+
+// wrapper
+	.wrapper_component.component_geolocation {
+
+		>.content_data {
+
+			// inputs container
+			ul.inputs_container {
+				display: flex;
+		    	flex-wrap: nowrap;
+		    	padding-bottom: 0.5em;
+
+		    	>li {
+		    		flex: 1 1 auto;
+
+		    		>label {
+		    			margin-right: 0.5em;
+		    		}
+
+		    		>input {
+
+		    			&.zoom {
+		    				width: 2em;
+		    			}
+
+		    			&.altitude {
+		    				width: 2em;
+		    			}
+		    		}
+		    	}
+			}
+
+			// map
+			.leaflet_map.leaflet-container {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				min-height: 300px;
+				margin: 0;
+				padding: 0;
+				padding-bottom: 5px;
+				z-index: 1;
+
+				background-color: #d9d0c9;
+				max-height: 100%;
+				min-height: unset;
+				height: 23em;
+
+				.leaflet-control-zoom a {
+					font-size: initial !important;
+					font-weight: bold;
+				}
+
+			}//end .leaflet_map
+
+		}//end >.content_data
+	}//end .wrapper_component.component_geolocation
 
 
