--- a/core/page/css/main.less
+++ b/core/page/css/main.less
@@ -30,7 +30,8 @@
 	@component_prefix : "component_";
 	@component_sufix  : "";
 
-	@import "../../@{component_prefix}geolocation/css/@{component_prefix}geolocation@{component_sufix}.less";
+	// @import "../../@{component_prefix}geolocation/css/@{component_prefix}geolocation@{component_sufix}.less";
+	@import "../../component_geolocation/css/component_geolocation.less";
 	/*
 	@import "../../@{component_prefix}input_text/css/@{component_prefix}input_text@{component_sufix}.less";
 	@import "../../@{component_prefix}autocomplete/css/@{component_prefix}autocomplete@{component_sufix}.less";
