Fixes minor buttons css

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -384,12 +384,12 @@
 		}
 
 		>.buttons {
-			padding: 1em;
+			padding: 0;
 			width: 100%;
-			background-color: #f5f2e8;
-			margin-top: 0.5em;
-			margin-bottom: 0.5em;
-			border-radius: 0.25em;
+			// background-color: #f5f2e8;
+			// margin-top: 0.5em;
+			// margin-bottom: 0.5em;
+			// border-radius: 0.25em;
 			display: flex;
     		flex-direction: row-reverse;
 
@@ -402,6 +402,8 @@
 				padding-top: 0.5em;
 				padding-bottom: 0.5em;
 				border-radius: 0.25em;
+				margin: 0.5em;
+				height: auto;
 
 				&:hover {
 					color: #000000;
@@ -1743,6 +1745,11 @@
 	    	height: 100%;
 		}
 	}//end .component_pdf
+
+
+
+// modal
+
 
 
 
