--- a/core/page/css/layout/page.less
+++ b/core/page/css/layout/page.less
@@ -81,7 +81,7 @@ html {
 		//display: none !important;
 		visibility: hidden !important;
 		opacity: 0;
-		transition: visibility 0.25s, height 0.25s, opacity 0.25s linear;
+		// transition: visibility 0.25s, height 0.25s, opacity 0.25s linear;
 		height: 0;
 		padding: 0!important;
 	}
