--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -47,7 +47,8 @@ background-color: #FFFF00;
 
 // menu_wrapper
 	.menu_wrapper {
-		z-index: 1002;
+		// z-index: 1002;
+		z-index: 1;
 		position: fixed;
 		top: 0px;
 		left:0px;
