--- a/core/page/html/page.phtml
+++ b/core/page/html/page.phtml
@@ -2,19 +2,21 @@
 <html>
 <head>
 	<title></title>
-	<link href="<?php echo DEDALO_CORE_URL ?>/page/css/main.css" rel="stylesheet">
+	<link href="<?php echo DEDALO_CORE_URL ?>/page/css/main.css?v=<?php echo DEDALO_VERSION ?>" rel="stylesheet">
 	<?php /*<link href="<?php echo DEDALO_CORE_URL ?>/common/css/structure.css" rel="stylesheet"> */?>
 </head>
 <body>
 	<div id="main" class="hide"></div>
 	<div id="debug" class="debug hide"></div>
 </body>
-<script defer="defer" src="<?php echo DEDALO_CORE_URL ?>/common/js/enviroment.js.php"></script>
+<script rel="preload" defer="defer" src="<?php echo DEDALO_CORE_URL ?>/common/js/enviroment.js.php"></script>
+<script defer="defer" src="<?php echo DEDALO_ROOT_WEB ?>/lib/tinymce/js/tinymce/tinymce.min.js"></script>
+<link rel="modulepreload" href="<?php echo DEDALO_CORE_URL ?>/common/js/components_list.js?v=<?php echo DEDALO_VERSION ?>">
 <script type="module">
 	const t0 = performance.now()
 
 	// page instance
-	import {get_instance} from '../common/js/instances.js'
+	import {get_instance} from '../common/js/instances.js?v=<?php echo DEDALO_VERSION ?>'
 	( async () => {
 
 		const main = document.getElementById("main")
