Fix tool time machine minor issues

--- a/core/tools/tool_time_machine/css/tool_time_machine.less
+++ b/core/tools/tool_time_machine/css/tool_time_machine.less
@@ -1,1 +1,11 @@
 // tool_time_machine
+
+
+.wrapper_tool.tool_time_machine {
+
+	// header section list
+	.header_wrapper_list {
+		top: 0;
+	}
+
+}
