--- a/core/paginator/css/paginator.less
+++ b/core/paginator/css/paginator.less
@@ -5,7 +5,7 @@
 // wrapper_paginator
 	.wrapper_paginator {
 		line-height: 1em;
-		padding: 0.5em;
+		// padding: 0.5em;
 
 		>.content_data {
 			line-height: 1.5em;
