Fix modal css issues in big mode

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1033,7 +1033,7 @@
 
 // modal
 	dd-modal {
-		z-index: 10;
+		// z-index: 10;
 
 		.tool_header {
 
@@ -1071,8 +1071,10 @@
 		>div {
 			//display: flex;
 			//flex: 1 1 100%;
-			padding: 1em;
 			outline: 1px solid #C0C0C0;
+			padding: 1em;
+			padding-top: 0.5em;
+    		padding-bottom: 0.5em;
 
 			>div {
 				//display: flex;
@@ -1278,13 +1280,6 @@
 				//padding-bottom: 0.25em;
 			}
 		}
-	}
-
-
-
-// paginator
-	.paginator {
-		width: 100%;
 	}
 
 
