Adds time machine css minor adjustments

--- a/core/inspector/css/inspector.less
+++ b/core/inspector/css/inspector.less
@@ -37,7 +37,7 @@
 			color: #ffffff;
 		}
 
-		.css_rows_paginator_div_links {
+		.nav_buttons {
 			padding-bottom: 0.5em;
 
 			>.icon_bs {
@@ -307,7 +307,7 @@
 		.css_rows_paginator_content {
 			padding: 5px;
 		}
-		.css_rows_paginator_div_links {
+		.nav_buttons {
 			//zoom: 1.4;
 			vertical-align: middle;
 		}
