Verticalize components design

--- a/core/paginator/css/paginator.less
+++ b/core/paginator/css/paginator.less
@@ -22,7 +22,7 @@
 				vertical-align: bottom;
 
 				button {
-					background-color: transparent;
+					background-color: #2c2c2e;
 					background-size: 100%;
 					background-repeat: no-repeat;
 					background-position: center;
