--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -32,7 +32,7 @@
 			-webkit-mask-size: contain;
 					mask-repeat: no-repeat;
 			-webkit-mask-repeat: no-repeat;
-					mask-position: center;			
+					mask-position: center;
 			-webkit-mask-position: center;
 		}
 
@@ -437,6 +437,11 @@
 			}
 		}
 
+		>.paginator {
+			padding-top: 0.5em;
+			padding-bottom: 0.5em;
+		}
+
 		&.edit {
 			//padding-right: @inspector_width;
 			width: calc(100vw - 18em);
@@ -609,6 +614,7 @@
 						background-size: cover;
 						background-repeat: no-repeat;
 						background-position: center;
+						background-color: #2c2c2e;
 						width: @height_line + 0.1;
 						height: @height_line;
 						margin-left: 0.3em;
@@ -828,8 +834,7 @@
 			&.component_pdf {
 				min-height: 50em;
 				>.content_data {
-					height: 100%;
-
+					height: calc(100% - 1.5em);
 				}
 			}
 
@@ -905,23 +910,39 @@
 				padding: 1em;
 
 				&.paginator {
-					padding: 0;
+					padding: 0.5em;
+    				padding-left: 1em;
 				}
 			}
 
 			>.label {
-				//background-color: #FEDACF;
-				//flex: 1 0 20%;
-				flex: 1 0 calc(20% - 2em);
+				// background-color: #FEDACF;
+				// flex: 1 0 calc(20% - 2em);
+				flex: 1 1 100%;
+				padding-bottom: 0;
+				padding-top: 0.75em;
+				// color: #7c7c7c;
+
+				letter-spacing: 0.5px;
+				text-overflow: ellipsis;
+				overflow: hidden;
+				white-space: nowrap;
+				cursor: default;
+				font-family: Oxygen,"Helvetica Neue",Helvetica,Arial,sans-serif;
+				font-weight: 100;
+				color: #9e9e9e;
 			}
 			>.content_data {
-				//background-color: #B9DFF6;
-				//flex: 1 0 80%;
-				flex: 1 0 calc(80% - 2em);
+				// background-color: #B9DFF6;
+				// flex: 1 0 calc(80% - 2em);
+				flex: 1 1 100%;
+
 				display: flex;
 				flex-wrap: wrap;
 				//flex-flow: column;
 				align-items: flex-start;
+				padding-top: 0.5em;
+
 
 				@media screen and (max-width: @width_break_point_1) {
 					flex: 1 1 100%;
@@ -987,7 +1008,8 @@
 				//}
 			}
 
-			@media screen and (max-width: 768px) {
+			// @media screen and (max-width: 768px) {
+			@media screen and (max-width: 1280px) {
 				flex-basis: 100% !important;
 			}
 		}
